--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "ember-cookies": "^0.3.0",
     "ember-data": "~3.0.0",
     "ember-export-application-global": "^2.0.0",
+    "ember-fetch": "^6.1.0",
     "ember-load-initializers": "^1.0.0",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-resolver": "^4.0.0",
